crates/plotnik-lib/tests/03-analyze/alternations/mixed_multiple_alternations.txt
Q = (foo [A: (a) (b)] [C: (c) (d)])
==== diagnostics ====
error: cannot mix labeled and unlabeled branches
 --> query.ptk:1:18
  |
1 | Q = (foo [A: (a) (b)] [C: (c) (d)])
  |           -      ^^^
  |           |
  |           tagged branch here
  |
help: use all labels for a tagged union, or none for a merged struct

error: cannot mix labeled and unlabeled branches
 --> query.ptk:1:31
  |
1 | Q = (foo [A: (a) (b)] [C: (c) (d)])
  |                        -      ^^^
  |                        |
  |                        tagged branch here
  |
help: use all labels for a tagged union, or none for a merged struct
==== symbols ====
Q
